// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDF Template Snapshots Household Statement AR: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
<head>
  <meta charset="UTF-8">
  <style>
    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&display=swap');
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Noto Sans Arabic', 'Arial', sans-serif; color: #111827; font-size: 14px; background: white; direction: rtl; }
    @page { size: A4 landscape; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 24px; font-weight: 700; color: #047857;">كشف حساب</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">مدرسة النور الدولية</p>
      </div>
      <img src="https://example.com/logo.png" alt="الشعار" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Household Info & Date Range -->
    <div style="display: flex; justify-content: space-between; margin-bottom: 24px;">
      <div>
        <p style="font-size: 12px; color: #6b7280; font-weight: 600; margin-bottom: 4px;">صاحب الحساب</p>
        <p style="font-size: 14px; font-weight: 600;">Al-Rashid Family</p>
        <p style="font-size: 13px; color: #374151;">Ahmed Al-Rashid</p>
      </div>
      <div>
        <table style="font-size: 13px;">
          <tr>
            <td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">الفترة:</td>
            <td style="padding: 3px 0; font-weight: 500;" dir="ltr">2025-09-01 &ndash; 2026-03-16</td>
          </tr>
          <tr>
            <td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">الرصيد الافتتاحي:</td>
            <td style="padding: 3px 0; font-weight: 600;" dir="ltr">AED 0.00</td>
          </tr>
        </table>
      </div>
    </div>

    <!-- Ledger Table -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 90px;">التاريخ</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 90px;">النوع</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 120px;">المرجع</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600;">الوصف</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 110px;">مدين</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 110px;">دائن</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 120px;">الرصيد</th>
        </tr>
      </thead>
      <tbody>
        
      <tr>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;" dir="ltr">2025-09-15</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">فاتورة</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;" dir="ltr">INV-202509-0001</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Tuition Fee — Term 1</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px;" dir="ltr">AED 15000.00</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px; color: #16a34a;" dir="ltr"></td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px; font-weight: 500;" dir="ltr">AED 15000.00</td>
      </tr>
      <tr>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;" dir="ltr">2025-10-01</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">دفعة</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;" dir="ltr">REC-202510-0001</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Bank transfer payment</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px;" dir="ltr"></td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px; color: #16a34a;" dir="ltr">AED 15000.00</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px; font-weight: 500;" dir="ltr">AED 0.00</td>
      </tr>
      <tr>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;" dir="ltr">2026-01-15</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">فاتورة</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;" dir="ltr">INV-202601-0001</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Tuition Fee — Term 2</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px;" dir="ltr">AED 16500.00</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px; color: #16a34a;" dir="ltr"></td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-size: 12px; font-weight: 500;" dir="ltr">AED 16500.00</td>
      </tr>
      </tbody>
    </table>

    <!-- Closing Balance -->
    <div style="display: flex; justify-content: flex-start; margin-top: 16px;">
      <table style="font-size: 14px; min-width: 280px;">
        <tr style="border-top: 2px solid #047857;">
          <td style="padding: 10px 0 6px 16px; font-weight: 700;">الرصيد الختامي:</td>
          <td style="padding: 10px 0 6px 0; text-align: left; font-weight: 700; font-size: 16px; color: #dc2626;" dir="ltr">
            AED 16500.00
          </td>
        </tr>
      </table>
    </div>

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>مدرسة النور الدولية &mdash; هذا الكشف لأغراض إعلامية فقط.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Household Statement EN: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
<head>
  <meta charset="UTF-8">
  <style>
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Helvetica Neue', Arial, sans-serif; color: #111827; font-size: 14px; background: white; }
    @page { size: A4 landscape; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 24px; font-weight: 700; color: #047857;">ACCOUNT STATEMENT</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">Al Noor International School</p>
      </div>
      <img src="https://example.com/logo.png" alt="Logo" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Household Info & Date Range -->
    <div style="display: flex; justify-content: space-between; margin-bottom: 24px;">
      <div>
        <p style="font-size: 12px; color: #6b7280; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">Account Holder</p>
        <p style="font-size: 14px; font-weight: 600;">Al-Rashid Family</p>
        <p style="font-size: 13px; color: #374151;">Ahmed Al-Rashid</p>
      </div>
      <div style="text-align: right;">
        <table style="font-size: 13px; margin-left: auto;">
          <tr>
            <td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Period:</td>
            <td style="padding: 3px 0; font-weight: 500;">2025-09-01 &ndash; 2026-03-16</td>
          </tr>
          <tr>
            <td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Opening Balance:</td>
            <td style="padding: 3px 0; font-weight: 600;">AED 0.00</td>
          </tr>
        </table>
      </div>
    </div>

    <!-- Ledger Table -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 90px;">Date</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 90px;">Type</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 120px;">Reference</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600;">Description</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 110px;">Debit</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 110px;">Credit</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 120px;">Balance</th>
        </tr>
      </thead>
      <tbody>
        
      <tr>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">2025-09-15</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Invoice</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">INV-202509-0001</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Tuition Fee — Term 1</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px;">AED 15000.00</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px; color: #16a34a;"></td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px; font-weight: 500;">AED 15000.00</td>
      </tr>
      <tr>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">2025-10-01</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Payment</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">REC-202510-0001</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Bank transfer payment</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px;"></td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px; color: #16a34a;">AED 15000.00</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px; font-weight: 500;">AED 0.00</td>
      </tr>
      <tr>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">2026-01-15</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Invoice</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">INV-202601-0001</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; font-size: 12px;">Tuition Fee — Term 2</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px;">AED 16500.00</td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px; color: #16a34a;"></td>
        <td style="padding: 7px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-size: 12px; font-weight: 500;">AED 16500.00</td>
      </tr>
      </tbody>
    </table>

    <!-- Closing Balance -->
    <div style="display: flex; justify-content: flex-end; margin-top: 16px;">
      <table style="font-size: 14px; min-width: 280px;">
        <tr style="border-top: 2px solid #047857;">
          <td style="padding: 10px 16px 6px 0; font-weight: 700;">Closing Balance:</td>
          <td style="padding: 10px 0 6px 0; text-align: right; font-weight: 700; font-size: 16px; color: #dc2626;">
            AED 16500.00
          </td>
        </tr>
      </table>
    </div>

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>Al Noor International School &mdash; This statement is for informational purposes only.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Invoice AR: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
<head>
  <meta charset="UTF-8">
  <style>
    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&display=swap');
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Noto Sans Arabic', 'Arial', sans-serif; color: #111827; font-size: 14px; background: white; direction: rtl; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 28px; font-weight: 700; color: #047857; letter-spacing: -0.5px;">فاتورة</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">مدرسة النور الدولية</p>
      </div>
      <img src="https://example.com/logo.png" alt="الشعار" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Invoice Meta + Billing Info -->
    <div style="display: flex; justify-content: space-between; margin-bottom: 28px;">
      <div>
        <p style="font-size: 12px; color: #6b7280; font-weight: 600; margin-bottom: 4px;">فاتورة إلى</p>
        <p style="font-size: 14px; font-weight: 600;">Al-Rashid Family</p>
        <p style="font-size: 13px; color: #374151;">عناية: Ahmed Al-Rashid</p>
        <p style="font-size: 13px; color: #374151; line-height: 1.8; margin-top: 4px;">123 Palm Jumeirah<br>Apt 4B<br>Dubai 12345<br>UAE</p>
      </div>
      <div>
        <table style="font-size: 13px;">
          <tr>
            <td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">رقم الفاتورة:</td>
            <td style="padding: 3px 0; font-weight: 600;" dir="ltr">INV-202603-0001</td>
          </tr>
          <tr><td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">تاريخ الإصدار:</td><td style="padding: 3px 0;" dir="ltr">2026-03-01</td></tr>
          <tr>
            <td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">تاريخ الاستحقاق:</td>
            <td style="padding: 3px 0;" dir="ltr">2026-03-31</td>
          </tr>
          <tr>
            <td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">الحالة:</td>
            <td style="padding: 3px 0;"><span style="color: #2563eb; font-weight: 600;">صادرة</span></td>
          </tr>
        </table>
      </div>
    </div>

    <!-- Line Items -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 8px; text-align: right; font-weight: 600;">الوصف</th>
          <th style="padding: 10px 8px; text-align: center; font-weight: 600; width: 80px;">الكمية</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 120px;">سعر الوحدة</th>
          <th style="padding: 10px 8px; text-align: left; font-weight: 600; width: 120px;">المبلغ</th>
        </tr>
      </thead>
      <tbody>
        
      <tr>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb;">Tuition Fee — Term 1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: center;" dir="ltr">1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: left;" dir="ltr">AED 15000.00</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-weight: 500;" dir="ltr">AED 15000.00</td>
      </tr>
      <tr>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb;">Activity Fee — Term 1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: center;" dir="ltr">1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: left;" dir="ltr">AED 2000.00</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: left; font-weight: 500;" dir="ltr">AED 2000.00</td>
      </tr>
      </tbody>
    </table>

    <!-- Totals -->
    <div style="display: flex; justify-content: flex-start; margin-top: 16px;">
      <table style="font-size: 13px; min-width: 280px;">
        <tr>
          <td style="padding: 6px 0 6px 16px; color: #6b7280;">المجموع الفرعي:</td>
          <td style="padding: 6px 0; text-align: left;" dir="ltr">AED 17000.00</td>
        </tr>
        <tr><td style="padding: 6px 0 6px 16px; color: #6b7280;">الخصم:</td><td style="padding: 6px 0; text-align: left; color: #16a34a;" dir="ltr">-AED 500.00</td></tr>
        <tr style="border-top: 2px solid #047857;">
          <td style="padding: 10px 0 6px 16px; font-weight: 700; font-size: 15px;">الإجمالي:</td>
          <td style="padding: 10px 0 6px 0; text-align: left; font-weight: 700; font-size: 15px;" dir="ltr">AED 16500.00</td>
        </tr>
        
        <tr><td style="padding: 6px 0 6px 16px; font-weight: 600; color: #dc2626;">الرصيد المستحق:</td><td style="padding: 6px 0; text-align: left; font-weight: 600; color: #dc2626;" dir="ltr">AED 16500.00</td></tr>
      </table>
    </div>

    

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>مدرسة النور الدولية &mdash; شكراً لسدادكم في الموعد.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Invoice EN: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
<head>
  <meta charset="UTF-8">
  <style>
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Helvetica Neue', Arial, sans-serif; color: #111827; font-size: 14px; background: white; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 28px; font-weight: 700; color: #047857; letter-spacing: -0.5px;">INVOICE</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">Al Noor International School</p>
      </div>
      <img src="https://example.com/logo.png" alt="Logo" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Invoice Meta + Billing Info -->
    <div style="display: flex; justify-content: space-between; margin-bottom: 28px;">
      <div>
        <p style="font-size: 12px; color: #6b7280; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">Bill To</p>
        <p style="font-size: 14px; font-weight: 600;">Al-Rashid Family</p>
        <p style="font-size: 13px; color: #374151;">Attn: Ahmed Al-Rashid</p>
        <p style="font-size: 13px; color: #374151; line-height: 1.5; margin-top: 4px;">123 Palm Jumeirah<br>Apt 4B<br>Dubai 12345<br>UAE</p>
      </div>
      <div style="text-align: right;">
        <table style="font-size: 13px; margin-left: auto;">
          <tr>
            <td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Invoice #:</td>
            <td style="padding: 3px 0; font-weight: 600;">INV-202603-0001</td>
          </tr>
          <tr><td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Issue Date:</td><td style="padding: 3px 0;">2026-03-01</td></tr>
          <tr>
            <td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Due Date:</td>
            <td style="padding: 3px 0;">2026-03-31</td>
          </tr>
          <tr>
            <td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Status:</td>
            <td style="padding: 3px 0;"><span style="color: #2563eb; font-weight: 600;">Issued</span></td>
          </tr>
        </table>
      </div>
    </div>

    <!-- Line Items -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 8px; text-align: left; font-weight: 600;">Description</th>
          <th style="padding: 10px 8px; text-align: center; font-weight: 600; width: 80px;">Qty</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 120px;">Unit Price</th>
          <th style="padding: 10px 8px; text-align: right; font-weight: 600; width: 120px;">Amount</th>
        </tr>
      </thead>
      <tbody>
        
      <tr>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb;">Tuition Fee — Term 1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: right;">AED 15000.00</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-weight: 500;">AED 15000.00</td>
      </tr>
      <tr>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb;">Activity Fee — Term 1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">1</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: right;">AED 2000.00</td>
        <td style="padding: 10px 8px; border-bottom: 1px solid #e5e7eb; text-align: right; font-weight: 500;">AED 2000.00</td>
      </tr>
      </tbody>
    </table>

    <!-- Totals -->
    <div style="display: flex; justify-content: flex-end; margin-top: 16px;">
      <table style="font-size: 13px; min-width: 280px;">
        <tr>
          <td style="padding: 6px 16px 6px 0; color: #6b7280;">Subtotal:</td>
          <td style="padding: 6px 0; text-align: right;">AED 17000.00</td>
        </tr>
        <tr><td style="padding: 6px 16px 6px 0; color: #6b7280;">Discount:</td><td style="padding: 6px 0; text-align: right; color: #16a34a;">-AED 500.00</td></tr>
        <tr style="border-top: 2px solid #047857;">
          <td style="padding: 10px 16px 6px 0; font-weight: 700; font-size: 15px;">Total:</td>
          <td style="padding: 10px 0 6px 0; text-align: right; font-weight: 700; font-size: 15px;">AED 16500.00</td>
        </tr>
        
        <tr><td style="padding: 6px 16px 6px 0; font-weight: 600; color: #dc2626;">Balance Due:</td><td style="padding: 6px 0; text-align: right; font-weight: 600; color: #dc2626;">AED 16500.00</td></tr>
      </table>
    </div>

    

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>Al Noor International School &mdash; Thank you for your prompt payment.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Payslip AR: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
<head>
  <meta charset="UTF-8">
  <style>
    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&display=swap');
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Noto Sans Arabic', 'Arial', sans-serif; color: #111827; font-size: 14px; background: white; direction: rtl; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 28px; font-weight: 700; color: #047857; letter-spacing: -0.5px;">كشف الراتب</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">مدرسة النور الدولية</p>
      </div>
      <div>
        <img src="https://example.com/logo.png" alt="الشعار" style="height: 60px; max-width: 120px; object-fit: contain; margin-bottom: 4px;">
        <p style="font-size: 13px; font-weight: 600; color: #374151;" dir="ltr">PSL-202603-0001</p>
        <p style="font-size: 13px; color: #6b7280;">March 2026</p>
      </div>
    </div>

    <!-- Staff Details -->
    <div style="margin-bottom: 24px; padding: 14px 16px; background: #f9fafb; border-radius: 6px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 10px; color: #047857;">بيانات الموظف</h3>
      <table style="width: 100%; font-size: 13px;">
        <tr>
          <td style="padding: 4px 0 4px 12px; color: #6b7280; font-weight: 500; width: 140px;">الاسم:</td>
          <td style="padding: 4px 0; font-weight: 600;">Sarah Johnson</td>
          <td style="padding: 4px 0 4px 12px; color: #6b7280; font-weight: 500; width: 140px;">الرقم الوظيفي:</td>
          <td style="padding: 4px 0;" dir="ltr">EMP-001</td>
        </tr>
        <tr>
          <td style="padding: 4px 0 4px 12px; color: #6b7280; font-weight: 500;">القسم:</td>
          <td style="padding: 4px 0;">Mathematics</td>
          <td style="padding: 4px 0 4px 12px; color: #6b7280; font-weight: 500;">المسمى الوظيفي:</td>
          <td style="padding: 4px 0;">Senior Teacher</td>
        </tr>
        <tr>
          <td style="padding: 4px 0 4px 12px; color: #6b7280; font-weight: 500;">نوع التوظيف:</td>
          <td style="padding: 4px 0;" colspan="3">دوام كامل</td>
        </tr>
      </table>
    </div>

    <!-- Compensation Details -->
    <div style="display: flex; gap: 24px; margin-bottom: 24px;">
      <div style="flex: 1;">
        <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 10px; color: #047857;">التعويض (براتب شهري)</h3>
        <table style="font-size: 13px;">
          
        <tr>
          <td style="padding: 6px 0 6px 12px; color: #6b7280; font-weight: 500;">الراتب الأساسي:</td>
          <td style="padding: 6px 0; font-weight: 500;" dir="ltr">AED 12000.00</td>
        </tr>
        <tr>
          <td style="padding: 6px 0 6px 12px; color: #6b7280; font-weight: 500;">إجمالي أيام العمل:</td>
          <td style="padding: 6px 0;" dir="ltr">22</td>
        </tr>
        <tr>
          <td style="padding: 6px 0 6px 12px; color: #6b7280; font-weight: 500;">أيام العمل:</td>
          <td style="padding: 6px 0;" dir="ltr">22</td>
        </tr>
        
        </table>
      </div>
    </div>

    <!-- Calculations Table -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px; margin-bottom: 24px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 12px; text-align: right; font-weight: 600;">البند</th>
          <th style="padding: 10px 12px; text-align: left; font-weight: 600; width: 180px;">المبلغ</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb;">الراتب الأساسي</td>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb; text-align: left;" dir="ltr">AED 12000.00</td>
        </tr>
        <tr>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb;">المكافأة</td>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb; text-align: left;" dir="ltr">AED 0.00</td>
        </tr>
        <tr style="background: #f0f9ff;">
          <td style="padding: 12px; font-weight: 700; font-size: 15px; border-top: 2px solid #047857;">إجمالي الراتب</td>
          <td style="padding: 12px; text-align: left; font-weight: 700; font-size: 15px; border-top: 2px solid #047857; color: #047857;" dir="ltr">AED 12000.00</td>
        </tr>
      </tbody>
    </table>

    
    <div style="margin-top: 24px; padding: 14px 16px; background: #f9fafb; border-radius: 6px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 8px; color: #047857;">التفاصيل المصرفية</h3>
      <table style="font-size: 13px;">
        <tr><td style="padding: 3px 0 3px 12px; color: #6b7280;">اسم البنك:</td><td style="padding: 3px 0;">Emirates NBD</td></tr>
        <tr><td style="padding: 3px 0 3px 12px; color: #6b7280;">الحساب:</td><td style="padding: 3px 0;" dir="ltr">****3456</td></tr>
        <tr><td style="padding: 3px 0 3px 12px; color: #6b7280;">رقم الآيبان:</td><td style="padding: 3px 0;" dir="ltr">****7890</td></tr>
      </table>
    </div>

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>مدرسة النور الدولية &mdash; هذا كشف راتب صادر آلياً ولا يتطلب توقيعاً.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Payslip EN: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
<head>
  <meta charset="UTF-8">
  <style>
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Helvetica Neue', Arial, sans-serif; color: #111827; font-size: 14px; background: white; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 28px; font-weight: 700; color: #047857; letter-spacing: -0.5px;">PAYSLIP</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">Al Noor International School</p>
      </div>
      <div style="text-align: right;">
        <img src="https://example.com/logo.png" alt="Logo" style="height: 60px; max-width: 120px; object-fit: contain; margin-bottom: 4px;">
        <p style="font-size: 13px; font-weight: 600; color: #374151;" dir="ltr">PSL-202603-0001</p>
        <p style="font-size: 13px; color: #6b7280;">March 2026</p>
      </div>
    </div>

    <!-- Staff Details -->
    <div style="margin-bottom: 24px; padding: 14px 16px; background: #f9fafb; border-radius: 6px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 10px; color: #047857; text-transform: uppercase;">Staff Details</h3>
      <table style="width: 100%; font-size: 13px;">
        <tr>
          <td style="padding: 4px 12px 4px 0; color: #6b7280; font-weight: 500; width: 140px;">Name:</td>
          <td style="padding: 4px 0; font-weight: 600;">Sarah Johnson</td>
          <td style="padding: 4px 12px 4px 0; color: #6b7280; font-weight: 500; width: 140px;">Staff Number:</td>
          <td style="padding: 4px 0;">EMP-001</td>
        </tr>
        <tr>
          <td style="padding: 4px 12px 4px 0; color: #6b7280; font-weight: 500;">Department:</td>
          <td style="padding: 4px 0;">Mathematics</td>
          <td style="padding: 4px 12px 4px 0; color: #6b7280; font-weight: 500;">Job Title:</td>
          <td style="padding: 4px 0;">Senior Teacher</td>
        </tr>
        <tr>
          <td style="padding: 4px 12px 4px 0; color: #6b7280; font-weight: 500;">Employment Type:</td>
          <td style="padding: 4px 0;" colspan="3">Full Time</td>
        </tr>
      </table>
    </div>

    <!-- Compensation Details -->
    <div style="display: flex; gap: 24px; margin-bottom: 24px;">
      <div style="flex: 1;">
        <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 10px; color: #047857; text-transform: uppercase;">Compensation (Salaried)</h3>
        <table style="font-size: 13px;">
          
        <tr>
          <td style="padding: 6px 12px 6px 0; color: #6b7280; font-weight: 500;">Base Salary:</td>
          <td style="padding: 6px 0; font-weight: 500;">AED 12000.00</td>
        </tr>
        <tr>
          <td style="padding: 6px 12px 6px 0; color: #6b7280; font-weight: 500;">Total Working Days:</td>
          <td style="padding: 6px 0;">22</td>
        </tr>
        <tr>
          <td style="padding: 6px 12px 6px 0; color: #6b7280; font-weight: 500;">Days Worked:</td>
          <td style="padding: 6px 0;">22</td>
        </tr>
        
        </table>
      </div>
    </div>

    <!-- Calculations Table -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px; margin-bottom: 24px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 12px; text-align: left; font-weight: 600;">Component</th>
          <th style="padding: 10px 12px; text-align: right; font-weight: 600; width: 180px;">Amount</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb;">Basic Pay</td>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb; text-align: right;">AED 12000.00</td>
        </tr>
        <tr>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb;">Bonus Pay</td>
          <td style="padding: 10px 12px; border-bottom: 1px solid #e5e7eb; text-align: right;">AED 0.00</td>
        </tr>
        <tr style="background: #f0f9ff;">
          <td style="padding: 12px; font-weight: 700; font-size: 15px; border-top: 2px solid #047857;">Total Pay</td>
          <td style="padding: 12px; text-align: right; font-weight: 700; font-size: 15px; border-top: 2px solid #047857; color: #047857;">AED 12000.00</td>
        </tr>
      </tbody>
    </table>

    
    <div style="margin-top: 24px; padding: 14px 16px; background: #f9fafb; border-radius: 6px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 8px; color: #047857;">Bank Details</h3>
      <table style="font-size: 13px;">
        <tr><td style="padding: 3px 12px 3px 0; color: #6b7280;">Bank Name:</td><td style="padding: 3px 0;">Emirates NBD</td></tr>
        <tr><td style="padding: 3px 12px 3px 0; color: #6b7280;">Account:</td><td style="padding: 3px 0;">****3456</td></tr>
        <tr><td style="padding: 3px 12px 3px 0; color: #6b7280;">IBAN:</td><td style="padding: 3px 0;">****7890</td></tr>
      </table>
    </div>

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>Al Noor International School &mdash; This is a computer-generated payslip and does not require a signature.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Receipt AR: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
<head>
  <meta charset="UTF-8">
  <style>
    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&display=swap');
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Noto Sans Arabic', 'Arial', sans-serif; color: #111827; font-size: 14px; background: white; direction: rtl; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 28px; font-weight: 700; color: #047857; letter-spacing: -0.5px;">إيصال</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">مدرسة النور الدولية</p>
      </div>
      <img src="https://example.com/logo.png" alt="الشعار" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Receipt Info -->
    <div style="display: flex; justify-content: space-between; margin-bottom: 28px;">
      <div>
        <p style="font-size: 12px; color: #6b7280; font-weight: 600; margin-bottom: 4px;">مستلم من</p>
        <p style="font-size: 14px; font-weight: 600;">Al-Rashid Family</p>
        <p style="font-size: 13px; color: #374151;">Ahmed Al-Rashid</p>
      </div>
      <div>
        <table style="font-size: 13px;">
          <tr>
            <td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">رقم الإيصال:</td>
            <td style="padding: 3px 0; font-weight: 600;" dir="ltr">REC-202603-0001</td>
          </tr>
          <tr>
            <td style="padding: 3px 0 3px 12px; color: #6b7280; font-weight: 500;">التاريخ:</td>
            <td style="padding: 3px 0;" dir="ltr">2026-03-15</td>
          </tr>
        </table>
      </div>
    </div>

    <!-- Payment Details -->
    <div style="background: #f9fafb; border: 1px solid #e5e7eb; border-radius: 6px; padding: 20px; margin-bottom: 24px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 12px; color: #047857;">تفاصيل الدفع</h3>
      <table style="width: 100%; font-size: 13px;">
        <tr>
          <td style="padding: 4px 0; color: #6b7280; width: 160px;">مرجع الدفع:</td>
          <td style="padding: 4px 0; font-weight: 500;" dir="ltr">PAY-202603-0001</td>
        </tr>
        <tr>
          <td style="padding: 4px 0; color: #6b7280;">طريقة الدفع:</td>
          <td style="padding: 4px 0; font-weight: 500;">تحويل بنكي</td>
        </tr>
        <tr>
          <td style="padding: 4px 0; color: #6b7280;">تاريخ الاستلام:</td>
          <td style="padding: 4px 0; font-weight: 500;" dir="ltr">2026-03-15</td>
        </tr>
      </table>
    </div>

    <!-- Allocation Details -->
    
    <div style="margin-bottom: 24px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 8px; color: #047857;">تفاصيل التوزيع</h3>
      <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
        <thead>
          <tr style="background: #f9fafb;">
            <th style="padding: 8px; text-align: right; font-weight: 600; font-size: 12px;">الفاتورة</th>
            <th style="padding: 8px; text-align: left; font-weight: 600; font-size: 12px;">المبلغ المطبق</th>
          </tr>
        </thead>
        <tbody>
          
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb;" dir="ltr">INV-202603-0001</td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: left;" dir="ltr">AED 16500.00</td>
      </tr>
        </tbody>
      </table>
    </div>

    <!-- Total -->
    <div style="display: flex; justify-content: flex-start; margin-top: 16px;">
      <div style="background: #047857; color: white; padding: 16px 24px; border-radius: 6px; min-width: 260px;">
        <div style="display: flex; justify-content: space-between; align-items: center;">
          <span style="font-size: 14px; font-weight: 600;">إجمالي المبلغ المستلم</span>
          <span style="font-size: 18px; font-weight: 700; margin-right: 24px;" dir="ltr">AED 16500.00</span>
        </div>
      </div>
    </div>

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>مدرسة النور الدولية &mdash; هذا إيصال رسمي بالدفع.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Receipt EN: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
<head>
  <meta charset="UTF-8">
  <style>
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Helvetica Neue', Arial, sans-serif; color: #111827; font-size: 14px; background: white; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 28px; font-weight: 700; color: #047857; letter-spacing: -0.5px;">RECEIPT</h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">Al Noor International School</p>
      </div>
      <img src="https://example.com/logo.png" alt="Logo" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Receipt Info -->
    <div style="display: flex; justify-content: space-between; margin-bottom: 28px;">
      <div>
        <p style="font-size: 12px; color: #6b7280; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">Received From</p>
        <p style="font-size: 14px; font-weight: 600;">Al-Rashid Family</p>
        <p style="font-size: 13px; color: #374151;">Ahmed Al-Rashid</p>
      </div>
      <div style="text-align: right;">
        <table style="font-size: 13px; margin-left: auto;">
          <tr>
            <td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Receipt #:</td>
            <td style="padding: 3px 0; font-weight: 600;">REC-202603-0001</td>
          </tr>
          <tr>
            <td style="padding: 3px 12px 3px 0; color: #6b7280; font-weight: 500;">Date:</td>
            <td style="padding: 3px 0;">2026-03-15</td>
          </tr>
        </table>
      </div>
    </div>

    <!-- Payment Details -->
    <div style="background: #f9fafb; border: 1px solid #e5e7eb; border-radius: 6px; padding: 20px; margin-bottom: 24px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 12px; color: #047857;">Payment Details</h3>
      <table style="width: 100%; font-size: 13px;">
        <tr>
          <td style="padding: 4px 0; color: #6b7280; width: 160px;">Payment Reference:</td>
          <td style="padding: 4px 0; font-weight: 500;">PAY-202603-0001</td>
        </tr>
        <tr>
          <td style="padding: 4px 0; color: #6b7280;">Payment Method:</td>
          <td style="padding: 4px 0; font-weight: 500;">Bank Transfer</td>
        </tr>
        <tr>
          <td style="padding: 4px 0; color: #6b7280;">Date Received:</td>
          <td style="padding: 4px 0; font-weight: 500;">2026-03-15</td>
        </tr>
      </table>
    </div>

    <!-- Allocation Details -->
    
    <div style="margin-bottom: 24px;">
      <h3 style="font-size: 13px; font-weight: 600; margin-bottom: 8px; color: #047857;">Allocation Details</h3>
      <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
        <thead>
          <tr style="background: #f9fafb;">
            <th style="padding: 8px; text-align: left; font-weight: 600; font-size: 12px;">Invoice</th>
            <th style="padding: 8px; text-align: right; font-weight: 600; font-size: 12px;">Amount Applied</th>
          </tr>
        </thead>
        <tbody>
          
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb;">INV-202603-0001</td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: right;">AED 16500.00</td>
      </tr>
        </tbody>
      </table>
    </div>

    <!-- Total -->
    <div style="display: flex; justify-content: flex-end; margin-top: 16px;">
      <div style="background: #047857; color: white; padding: 16px 24px; border-radius: 6px; min-width: 260px;">
        <div style="display: flex; justify-content: space-between; align-items: center;">
          <span style="font-size: 14px; font-weight: 600;">Total Amount Received</span>
          <span style="font-size: 18px; font-weight: 700; margin-left: 24px;">AED 16500.00</span>
        </div>
      </div>
    </div>

    <!-- Footer -->
    <div style="margin-top: 40px; padding-top: 16px; border-top: 1px solid #e5e7eb; font-size: 11px; color: #9ca3af; text-align: center;">
      <p>Al Noor International School &mdash; This is an official receipt of payment.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Report Card AR: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
<head>
  <meta charset="UTF-8">
  <style>
    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&display=swap');
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Noto Sans Arabic', 'Arial', sans-serif; color: #111827; font-size: 14px; background: white; direction: rtl; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: center; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 22px; font-weight: 700; color: #047857;">
          Student Report Card
        </h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">مدرسة النور الدولية</p>
      </div>
      <img src="https://example.com/logo.png" alt="الشعار" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Student Info -->
    <table style="width: 100%; font-size: 13px; margin-bottom: 20px;">
      <tr>
        <td style="padding: 4px 0;"><strong>الطالب:</strong> Fatima Al-Rashid</td>
        <td style="padding: 4px 0;"><strong>رقم الطالب:</strong> <span dir="ltr">ENR-2026-0042</span></td>
      </tr>
      <tr>
        <td style="padding: 4px 0;"><strong>المرحلة:</strong> Year 9</td>
        <td style="padding: 4px 0;"><strong>الصف:</strong> 9A</td>
      </tr>
      <tr>
        <td style="padding: 4px 0;"><strong>العام الدراسي:</strong> 2025-2026</td>
        <td style="padding: 4px 0;"><strong>الفترة:</strong> Term 1 (<span dir="ltr">2025-09-01 – 2025-12-15</span>)</td>
      </tr>
    </table>

    <!-- Grades Table -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 8px; text-align: right; font-weight: 600;">المادة</th>
          <th style="padding: 10px 8px; text-align: center; font-weight: 600; width: 100px;">الدرجة (%)</th>
          <th style="padding: 10px 8px; text-align: center; font-weight: 600; width: 100px;">التقدير</th>
        </tr>
      </thead>
      <tbody>
        
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; font-weight: 500;">
          Mathematics
          <span style="color: #6b7280; font-weight: 400;"> (MATH9)</span>
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">
          92.0%
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center; font-weight: 600;">
          A
        </td>
      </tr>
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; font-weight: 500;">
          English Language
          <span style="color: #6b7280; font-weight: 400;"> (ENG9)</span>
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">
          87.0%
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center; font-weight: 600;">
          B+
        </td>
      </tr>
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; font-weight: 500;">
          Science
          <span style="color: #6b7280; font-weight: 400;"> (SCI9)</span>
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">
          90.0%
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center; font-weight: 600;">
          A-
        </td>
      </tr>
      </tbody>
    </table>

    
    <div style="margin-top: 24px;">
      <h3 style="font-size: 14px; font-weight: 600; margin-bottom: 8px; color: #047857;">ملخص الحضور</h3>
      <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
        <tr>
          <td style="padding: 6px 8px; background: #f9fafb;">إجمالي الأيام</td>
          <td style="padding: 6px 8px; text-align: center;" dir="ltr">65</td>
          <td style="padding: 6px 8px; background: #f9fafb;">حاضر</td>
          <td style="padding: 6px 8px; text-align: center;" dir="ltr">62</td>
          <td style="padding: 6px 8px; background: #f9fafb;">غائب</td>
          <td style="padding: 6px 8px; text-align: center;" dir="ltr">2</td>
          <td style="padding: 6px 8px; background: #f9fafb;">متأخر</td>
          <td style="padding: 6px 8px; text-align: center;" dir="ltr">1</td>
        </tr>
      </table>
    </div>
    
    <div style="margin-top: 16px;"><h3 style="font-size: 14px; font-weight: 600; margin-bottom: 4px; color: #047857;">ملاحظات المعلم</h3><p style="font-size: 13px; color: #374151; line-height: 1.8;">Fatima is a dedicated and hardworking student who consistently achieves high standards.</p></div>
    
  
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Report Card EN: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
<head>
  <meta charset="UTF-8">
  <style>
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Helvetica Neue', Arial, sans-serif; color: #111827; font-size: 14px; background: white; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="display: flex; justify-content: space-between; align-items: center; border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div>
        <h1 style="font-size: 22px; font-weight: 700; color: #047857;">
          Student Report Card
        </h1>
        <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">Al Noor International School</p>
      </div>
      <img src="https://example.com/logo.png" alt="Logo" style="height: 60px; max-width: 120px; object-fit: contain;">
    </div>

    <!-- Student Info -->
    <table style="width: 100%; font-size: 13px; margin-bottom: 20px;">
      <tr>
        <td style="padding: 4px 0;"><strong>Student:</strong> Fatima Al-Rashid</td>
        <td style="padding: 4px 0;"><strong>Student Number:</strong> ENR-2026-0042</td>
      </tr>
      <tr>
        <td style="padding: 4px 0;"><strong>Year Group:</strong> Year 9</td>
        <td style="padding: 4px 0;"><strong>Class:</strong> 9A</td>
      </tr>
      <tr>
        <td style="padding: 4px 0;"><strong>Academic Year:</strong> 2025-2026</td>
        <td style="padding: 4px 0;"><strong>Period:</strong> Term 1 (2025-09-01 – 2025-12-15)</td>
      </tr>
    </table>

    <!-- Grades Table -->
    <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
      <thead>
        <tr style="background: #047857; color: white;">
          <th style="padding: 10px 8px; text-align: left; font-weight: 600;">Subject</th>
          <th style="padding: 10px 8px; text-align: center; font-weight: 600; width: 100px;">Score (%)</th>
          <th style="padding: 10px 8px; text-align: center; font-weight: 600; width: 100px;">Grade</th>
        </tr>
      </thead>
      <tbody>
        
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; font-weight: 500;">
          Mathematics
          <span style="color: #6b7280; font-weight: 400;"> (MATH9)</span>
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">
          92.0%
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center; font-weight: 600;">
          A
        </td>
      </tr>
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; font-weight: 500;">
          English Language
          <span style="color: #6b7280; font-weight: 400;"> (ENG9)</span>
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">
          87.0%
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center; font-weight: 600;">
          B+
        </td>
      </tr>
      <tr>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; font-weight: 500;">
          Science
          <span style="color: #6b7280; font-weight: 400;"> (SCI9)</span>
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center;">
          90.0%
        </td>
        <td style="padding: 8px; border-bottom: 1px solid #e5e7eb; text-align: center; font-weight: 600;">
          A-
        </td>
      </tr>
      </tbody>
    </table>

    
    <div style="margin-top: 24px;">
      <h3 style="font-size: 14px; font-weight: 600; margin-bottom: 8px; color: #047857;">Attendance Summary</h3>
      <table style="width: 100%; border-collapse: collapse; font-size: 13px;">
        <tr>
          <td style="padding: 6px 8px; background: #f9fafb;">Total Days</td>
          <td style="padding: 6px 8px; text-align: center;">65</td>
          <td style="padding: 6px 8px; background: #f9fafb;">Present</td>
          <td style="padding: 6px 8px; text-align: center;">62</td>
          <td style="padding: 6px 8px; background: #f9fafb;">Absent</td>
          <td style="padding: 6px 8px; text-align: center;">2</td>
          <td style="padding: 6px 8px; background: #f9fafb;">Late</td>
          <td style="padding: 6px 8px; text-align: center;">1</td>
        </tr>
      </table>
    </div>
    
    <div style="margin-top: 16px;"><h3 style="font-size: 14px; font-weight: 600; margin-bottom: 4px; color: #047857;">Teacher Comments</h3><p style="font-size: 13px; color: #374151; line-height: 1.5;">Fatima is a dedicated and hardworking student who consistently achieves high standards.</p></div>
    
  
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Transcript AR: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
<head>
  <meta charset="UTF-8">
  <style>
    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&display=swap');
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Noto Sans Arabic', 'Arial', sans-serif; color: #111827; font-size: 14px; background: white; direction: rtl; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div style="display: flex; justify-content: space-between; align-items: center;">
        <div>
          <h1 style="font-size: 22px; font-weight: 700; color: #047857;">السجل الأكاديمي</h1>
          <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">مدرسة النور الدولية</p>
        </div>
        <img src="https://example.com/logo.png" alt="الشعار" style="height: 60px; max-width: 120px; object-fit: contain;">
      </div>
    </div>

    <!-- Student Info -->
    <table style="width: 100%; font-size: 13px; margin-bottom: 20px;">
      <tr>
        <td style="padding: 4px 0;"><strong>الطالب:</strong> Fatima Al-Rashid</td>
        <td style="padding: 4px 0;"><strong>رقم الطالب:</strong> <span dir="ltr">ENR-2026-0042</span></td>
      </tr>
      <tr>
        <td style="padding: 4px 0;"><strong>المرحلة:</strong> Year 9</td>
        <td style="padding: 4px 0;"><strong>تاريخ الإصدار:</strong> <span dir="ltr">15/01/2026</span></td>
      </tr>
    </table>

    <!-- Academic Records -->
    
      <div style="margin-bottom: 24px;">
        <h3 style="font-size: 15px; font-weight: 600; color: #047857; margin-bottom: 8px; border-bottom: 2px solid #047857; padding-bottom: 4px;">
          2024-2025
        </h3>
        
          <div style="margin-bottom: 16px;">
            <h4 style="font-size: 13px; font-weight: 600; color: #374151; margin-bottom: 6px;">Term 1</h4>
            <table style="width: 100%; border-collapse: collapse; font-size: 12px;">
              <thead>
                <tr style="background: #f3f4f6;">
                  <th style="padding: 6px 8px; text-align: right; font-weight: 600; border-bottom: 1px solid #d1d5db;">المادة</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">الدرجة (%)</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">التقدير</th>
                </tr>
              </thead>
              <tbody>
                
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Mathematics
                      <span style="color: #6b7280;"> (MATH8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;" dir="ltr">89.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A-</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      English
                      <span style="color: #6b7280;"> (ENG8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;" dir="ltr">85.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">B+</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Science
                      <span style="color: #6b7280;"> (SCI8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;" dir="ltr">93.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A</td>
                  </tr>
              </tbody>
            </table>
          </div>
          <div style="margin-bottom: 16px;">
            <h4 style="font-size: 13px; font-weight: 600; color: #374151; margin-bottom: 6px;">Term 2</h4>
            <table style="width: 100%; border-collapse: collapse; font-size: 12px;">
              <thead>
                <tr style="background: #f3f4f6;">
                  <th style="padding: 6px 8px; text-align: right; font-weight: 600; border-bottom: 1px solid #d1d5db;">المادة</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">الدرجة (%)</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">التقدير</th>
                </tr>
              </thead>
              <tbody>
                
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Mathematics
                      <span style="color: #6b7280;"> (MATH8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;" dir="ltr">91.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      English
                      <span style="color: #6b7280;"> (ENG8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;" dir="ltr">88.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A-</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Science
                      <span style="color: #6b7280;"> (SCI8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;" dir="ltr">94.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A</td>
                  </tr>
              </tbody>
            </table>
          </div>
      </div>

    
  </div>
</body>
</html>"
`;

exports[`PDF Template Snapshots Transcript EN: renders deterministic HTML 1`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
<head>
  <meta charset="UTF-8">
  <style>
    * { margin: 0; padding: 0; box-sizing: border-box; }
    body { font-family: 'Helvetica Neue', Arial, sans-serif; color: #111827; font-size: 14px; background: white; }
    @page { size: A4; margin: 0; }
  </style>
</head>
<body>
  <div style="padding: 0;">
    <!-- Header -->
    <div style="border-bottom: 3px solid #047857; padding-bottom: 16px; margin-bottom: 24px;">
      <div style="display: flex; justify-content: space-between; align-items: center;">
        <div>
          <h1 style="font-size: 22px; font-weight: 700; color: #047857;">Academic Transcript</h1>
          <p style="font-size: 16px; font-weight: 600; margin-top: 4px;">Al Noor International School</p>
        </div>
        <img src="https://example.com/logo.png" alt="Logo" style="height: 60px; max-width: 120px; object-fit: contain;">
      </div>
    </div>

    <!-- Student Info -->
    <table style="width: 100%; font-size: 13px; margin-bottom: 20px;">
      <tr>
        <td style="padding: 4px 0;"><strong>Student:</strong> Fatima Al-Rashid</td>
        <td style="padding: 4px 0;"><strong>Student Number:</strong> ENR-2026-0042</td>
      </tr>
      <tr>
        <td style="padding: 4px 0;"><strong>Year Group:</strong> Year 9</td>
        <td style="padding: 4px 0;"><strong>Generated:</strong> 15/01/2026</td>
      </tr>
    </table>

    <!-- Academic Records -->
    
      <div style="margin-bottom: 24px;">
        <h3 style="font-size: 15px; font-weight: 600; color: #047857; margin-bottom: 8px; border-bottom: 2px solid #047857; padding-bottom: 4px;">
          2024-2025
        </h3>
        
          <div style="margin-bottom: 16px;">
            <h4 style="font-size: 13px; font-weight: 600; color: #374151; margin-bottom: 6px;">Term 1</h4>
            <table style="width: 100%; border-collapse: collapse; font-size: 12px;">
              <thead>
                <tr style="background: #f3f4f6;">
                  <th style="padding: 6px 8px; text-align: left; font-weight: 600; border-bottom: 1px solid #d1d5db;">Subject</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">Score (%)</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">Grade</th>
                </tr>
              </thead>
              <tbody>
                
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Mathematics
                      <span style="color: #6b7280;"> (MATH8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;">89.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A-</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      English
                      <span style="color: #6b7280;"> (ENG8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;">85.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">B+</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Science
                      <span style="color: #6b7280;"> (SCI8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;">93.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A</td>
                  </tr>
              </tbody>
            </table>
          </div>
          <div style="margin-bottom: 16px;">
            <h4 style="font-size: 13px; font-weight: 600; color: #374151; margin-bottom: 6px;">Term 2</h4>
            <table style="width: 100%; border-collapse: collapse; font-size: 12px;">
              <thead>
                <tr style="background: #f3f4f6;">
                  <th style="padding: 6px 8px; text-align: left; font-weight: 600; border-bottom: 1px solid #d1d5db;">Subject</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">Score (%)</th>
                  <th style="padding: 6px 8px; text-align: center; font-weight: 600; width: 80px; border-bottom: 1px solid #d1d5db;">Grade</th>
                </tr>
              </thead>
              <tbody>
                
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Mathematics
                      <span style="color: #6b7280;"> (MATH8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;">91.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      English
                      <span style="color: #6b7280;"> (ENG8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;">88.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A-</td>
                  </tr>
                  <tr>
                    <td style="padding: 5px 8px; border-bottom: 1px solid #e5e7eb;">
                      Science
                      <span style="color: #6b7280;"> (SCI8)</span>
                    </td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb;">94.0%</td>
                    <td style="padding: 5px 8px; text-align: center; border-bottom: 1px solid #e5e7eb; font-weight: 500;">A</td>
                  </tr>
              </tbody>
            </table>
          </div>
      </div>

    
  </div>
</body>
</html>"
`;
